--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=powerSTEP01Driver
-version=1.3.1
-author=Number Eight Innovation
-maintainer=Number Eight Innovation
-sentence=powerSTEP01-based X-NUCLEO-IHM03A1 stepper driver board, modified version of SparkFun AutoDriver library
-paragraph=powerSTEP01-based X-NUCLEO-IHM03A1 stepper driver board, modified version of SparkFun AutoDriver library
-category=Other
-url=https://github.com/Megunolink/powerSTEP01_Arduino_Library
+name=PonoorPowerSTEP01Driver
+version=0.1.0
+author=Ponoor Experiments Inc <info@ponoor.com>
+maintainer=Kanta Horio <kanta@ponoor.com>
+sentence=PowerSTEP01 library with voltage and current drive mode, modified version of Megunolink powerSTEP01_Arduino_Library.
+paragraph=PowerSTEP01 library with voltage and current drive mode, modified version of Megunolink powerSTEP01_Arduino_Library.
+category=Device Control
+url=https://github.com/ponoor/Ponoor_PowerSTEP01_Library
 architectures=*
+includes=Ponoor_PowerSTEP01Library.h
