keywords, library properties, readme and some comments update

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=PonoorPowerSTEP01Driver
+name=Ponoor PowerSTEP01 Library
 version=0.1.0
 author=Ponoor Experiments Inc <info@ponoor.com>
 maintainer=Kanta Horio <kanta@ponoor.com>
