--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Ponoor PowerSTEP01 Library
-version=0.1.0
+version=1.0.0
 author=Ponoor Experiments Inc <info@ponoor.com>
 maintainer=Kanta Horio <kanta@ponoor.com>
-sentence=PowerSTEP01 library with voltage and current drive mode, modified version of Megunolink powerSTEP01_Arduino_Library.
-paragraph=PowerSTEP01 library with voltage and current drive mode, modified version of Megunolink powerSTEP01_Arduino_Library.
+sentence=STM PowerSTEP01 stepper driver chip library with voltage and current drive mode.
+paragraph=This library is modified from Megunolink powerSTEP01_Arduino_Library to support a current drive mode. Also to work with SAMD architecture.
 category=Device Control
 url=https://github.com/ponoor/Ponoor_PowerSTEP01_Library
 architectures=*
